@@ -31,13 +31,7 @@ namespace dchroot_dsa
   class options : public schroot::options_base
   {
   public:
-
-    /**
-     * The constructor.
-     *
-     * @param argc the number of arguments.
-     * @param argv the list of arguments.
-     */
+    /// The constructor.
     options ();
 
     /// The destructor.
